[project]
name = "ai-triage-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.112.0",
    "boto3>=1.43.46",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langgraph>=1.2.6",
    "langsmith>=0.9.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
